# task1

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: replacer.h
lib/src/: replacer.c  utils.c  utils.h
src/: CMakeLists.txt  main.c
tests/: CMakeLists.txt  test_replacer.c
tests/replacer_tests/: test_replacer.c
